# VAII-sem-project

./: .gitignore  Cargo.toml  README.md  build.sh  game-over.html  game.css  game.html  game.js  game_bg.wasm  index.html  vaii_sem_project.js  vaii_sem_project_bg.wasm
game/: Cargo.toml  build.sh
game/assets/: TheDonut.glb  TheDonut.gltf  cube.glb  cube.gltf
game/src/: color.rs  cube.rs  game.rs  gfx.rs  lib.rs  model.rs  web_gl.rs
server/: Cargo.toml
server/src/: endpoints.rs  main.rs  models.rs
src/: color.rs  gfx.rs  lib.rs  logging.rs  web_gl.rs
www/: game-loader.js  game-over.html  game.css  game.html  game_loader.js  game_over.html  game_over.js  general.css  hall-of-fame.html  hall-of-fame.js  index.html  index.js  log-in.html  manage-account.html  manage-account.js  manage_account.html  manage_account.js  score-table.js  score_table.js  sheet.css  sign-up.html  user.js  view-messages.html  view-messages.js  view-runs.html  view-runs.js
