[package]
name = "game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[profile.release]
debug-assertions = true

[profile.deploy]
inherits = "release"
debug-assertions = false
codegen-units = 1
lto = "fat"

[dependencies]
wasm-bindgen = "0.2.78"
js-sys = "0.3.55"
winit = { version = "0.25.0", features = ['web-sys'] }
bytemuck = { version = "1.7.2", features = ['derive'] }
nalgebra-glm = "0.15.0"
itertools = "0.10.1"
instant = { version = "0.1.11", features = [ 'wasm-bindgen'] }
gltf = { version = "0.16", features = ['names'] }
rand = "0.8"

[dependencies.getrandom]
version = "*"
features = ['js']

[dependencies.web-sys]
version = "0.3.55"
features = [
  'Document',
  'Element',
  'HtmlCanvasElement',
  'console',
  'AddEventListenerOptions',
  'CssStyleDeclaration',
  'BeforeUnloadEvent',
  'DomRect',
  'Event',
  'EventTarget',
  'FocusEvent',
  'HtmlElement',
  'KeyboardEvent',
  'MediaQueryList',
  'MediaQueryListEvent',
  'MouseEvent',
  'Node',
  'PointerEvent',
  'Window',
  'WheelEvent',
  'WebGlBuffer',
  'WebGlRenderingContext',
  'WebGlProgram',
  'WebGlShader',
  'WebGlTexture',
  'WebGlUniformLocation',
  'HtmlSpanElement',
  'Storage',
  'Location',
]
