[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tide = "0.16"
async-std = { version = "1.13", features = ["attributes"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", features = ["mysql", "runtime-async-std-native-tls", "chrono"] }
bcrypt = "0.15"
